# test-rig-workflows

./: .workflows-lint.yaml
.github/workflows/: ci.yaml  deploy_image.yaml
visr/: Chart.yaml
visr/images/visr-reconstruction/: README.md  pyproject.toml
visr/images/visr-reconstruction/src/visr_reconstruction/: __init__.py  __main__.py
visr/notebooks/: requirements.txt  visr-maths-03.ipynb
visr/templates/: visr-reconstruction.yaml  visr-template.yaml
